Created ConsumptionTable.js to hold the code for displaying the table on the consumtion page

--- a/consumption.html
+++ b/consumption.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Consumption</h1>
+
+    <!-- insert a graph of all recently used materials -->
+    <script src = "ConsumptionTable.js"></script>
+
 </body>
 </html>
