Added headers for the consumption table

--- a/consumption.html
+++ b/consumption.html
@@ -6,11 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    table, th, td {
+        border: 1px solid black;
+        border-collapse: collapse;
+    }
+</style>
 <body>
     <h1>Consumption</h1>
 
     <!-- insert a graph of all recently used materials -->
     <script src = "ConsumptionTable.js"></script>
+    <table style="width:90%">
+        <tr>
+            <th>Item ID</th>
+            <th>Item Name</th>
+            <th>Quantity Removed</th>
+            <th>Quantity Left</th>
+            <th>Date Removed</th>
+            <th>User</th>
+        </tr>
+    </table>
 
 </body>
 </html>
