added 'room' to consumption table headers

--- a/consumption.html
+++ b/consumption.html
@@ -21,6 +21,7 @@
         <tr>
             <th>Item ID</th>
             <th>Item Name</th>
+            <th>Room</th>
             <th>Quantity Removed</th>
             <th>Quantity Left</th>
             <th>Date Removed</th>
