Navigation enabled and blueprint for signoff

--- a/all.html
+++ b/all.html
@@ -86,7 +86,19 @@ var http = new XMLHttpRequest();
  </script>
 
 
+<button onclick="parent.location='search.html'" > Search </button>
+
+<button onclick="parent.location='items.html'"> Add Item </button>
+
+<button onclick="parent.location='sort.html'"> Sort </button>
+
+<button onclick="parent.location='signoff.html'" > Sign item </button>
+
+<button onclick="parent.location='expense.html'"> Expense </button>
+
+
 <h2> ALL ITEMS: </h2>
+
 
 <table id="table" border="2">
 
@@ -124,6 +136,13 @@ var http = new XMLHttpRequest();
 
 </table>
 
+<!-- <button onclick="parent.location='search.html'" > Search </button>
+
+<button onclick="parent.location='items.html'"> Add Item </button>
+
+<button onclick="parent.location='sort.html'"> Sort </button>
+
+<button onclick="parent.location='signoff.html'" > Sign item </button> -->
 
 
 </body>
