--- a/items.html
+++ b/items.html
@@ -135,6 +135,7 @@
 
 
     <button  onclick= "post()" > Add item </button>
+    <button onclick="parent.location='all.html'" > Home </button>
 </body>
 
 </html>
