added buttons to go from 'all' to 'consumption' and from 'consumption' to 'all'

--- a/all.html
+++ b/all.html
@@ -96,6 +96,8 @@ var http = new XMLHttpRequest();
 
 <button onclick="parent.location='expense.html'"> Expense </button>
 
+<button onclick="parent.location='consumption.html'"> Consumption </button>
+
 
 <h2> ALL ITEMS: </h2>
 
