added button to go from 'expense' to 'all'

--- a/expense.html
+++ b/expense.html
@@ -116,6 +116,8 @@
 
         getExpenseData();
     </script>
+
+    <button onclick="parent.location='all.html'" > Home </button>
 </body>
 
 </html>
