--- a/all.html
+++ b/all.html
@@ -94,7 +94,7 @@ var http = new XMLHttpRequest();
 
 <button onclick="parent.location='signoff.html'" > Sign item </button>
 
-<button onclick="parent.location='expense.html'"> Expense </button>
+<button onclick="parent.location='expense.html'"> Expenses </button>
 
 <button onclick="parent.location='consumption.html'"> Consumption </button>
 
