--- a/sort.html
+++ b/sort.html
@@ -134,6 +134,12 @@
 </div>
 </br>
 
+<div>
+    <br>
+    <button onclick="parent.location='all.html'"> Home </button>
+</br>
+</div>
+
 <table id="table" border="2">
 
     <!-- ROW 0 That is the heading -->
