added drop down menu to select year in expenses

--- a/expense.html
+++ b/expense.html
@@ -9,6 +9,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f1f1f1;
+            min-width: 160px;
+            overflow: auto;
+            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+        }
+
+        .dropdown-content a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+
+        .dropdown a:hover {
+            background-color: #ddd;
+        }
+
+        .show {
+            display: block;
+        }
+    </style>
 </head>
 
 <br> </br>
@@ -16,6 +48,16 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 
 <body>
+
+    <div>
+        <button onclick="selectYear()" class="dropbtn"> Select Year </button>
+        <div id="myDropdown" class="dropdown-content">
+            <a href="#2022">2022</a>
+            <a href="#2021">2021</a>
+            <a href="#2020">2020</a>
+        </div>
+    </div>
+    <br>
 
     <div>
         <label> Current Month Spent: </label>
@@ -32,6 +74,23 @@
     <canvas id="expenseChart" style="width:100%;max-width:700px"></canvas>
 
     <script>
+
+        function selectYear() {
+            document.getElementById('myDropdown').classList.toggle('show');
+        }
+
+        window.onclick = function (event) {
+            if (!event.target.matches('.dropbtn')) {
+                var dropdowns = document.getElementsByClassName("dropdown-content");
+                var i;
+                for (i = 0; i < dropdowns.length; i++) {
+                    var openDropdown = dropdowns[i];
+                    if (openDropdown.classList.contains('show')) {
+                        openDropdown.classList.remove('show');
+                    }
+                }
+            }
+        }
 
 
         // global variable that will hold the expense data of the year we select later
