--- a/all.html
+++ b/all.html
@@ -159,7 +159,7 @@
     <!-- Warning and alert  -->
 
     <h2> Warnings and Alert: </h2>
-    <h5> Following items are less in stock.</h5>
+    <h5> Following items have low stock.</h5>
 
     <table id="table2" border="2">
 
