--- a/displayInventory.html
+++ b/displayInventory.html
@@ -87,7 +87,7 @@ var http = new XMLHttpRequest();
 <table id="table" border="2">
 
     <!-- ROW 0 That is the heading -->
-    <tr id="ttr">
+    <tr id="ttr" border="2" class="styled-table">
         <th>ID</th>
         <th>NAME</th>
         <th>Quantity</th>
